# boat_workspace

./: .gitmodules  README.md
Startup Service/: catabot_bringup.service  startup_bringup.sh
catabot_bringup/: CMakeLists.txt  README.md  package.xml
catabot_bringup/launch/: apm.launch  apm_config.yaml  apm_pluginlists.yaml  catabot_bringup.launch  catabot_bringup.launch.py  logger.launch  logger.launch.py  os-122525001750-metadata.json
catabot_bringup/reqs/: 99-catabot.rules
catabot_bringup/script/: common_include.sh  read_message_python.py  servo_controller.py  startup_bringup.sh  test_topics.py
inertiallabs-ros2-pkgs/inertiallabs_ins/: CMakeLists.txt
inertiallabs-ros2-pkgs/inertiallabs_ins/launch/: ins.launch
inertiallabs-ros2-pkgs/inertiallabs_ins/src/: il_ins.cpp
ouster-ros/ouster-ros/config/: os_sensor_cloud_image_params.yaml
ouster-ros/ouster-ros/launch/: os-122525001750-metadata.json
zed-ros2-wrapper/: os-122525001750-metadata.json
zed-ros2-wrapper/zed_components/: package.xml
zed-ros2-wrapper/zed_components/src/include/: sl_version.hpp
zed-ros2-wrapper/zed_debug/: package.xml
zed-ros2-wrapper/zed_wrapper/config/: common_stereo.yaml
