<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>catabot_bringup</name>
  <version>2.0.0</version>
  <description>Catabot bringup package – ROS 2 port</description>

  <maintainer email="alberto.quattrini.li@dartmouth.edu">Alberto Quattrini Li</maintainer>
  <license>MIT</license>
  <author email="alberto.quattrini.li@dartmouth.edu">Alberto Quattrini Li</author>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch infrastructure -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Sensor / driver dependencies -->
  <!-- TODO: verify ROS2 package names for each dep below -->
  <exec_depend>mavros</exec_depend>           <!-- ROS2 mavros port required -->
  <exec_depend>usb_cam</exec_depend>          <!-- ROS2 usb_cam available -->
  <exec_depend>tf2_ros</exec_depend>          <!-- replaces tf -->
  <exec_depend>ouster_ros</exec_depend>       <!-- TODO: verify ROS2 release -->
  <exec_depend>velodyne_pointcloud</exec_depend> <!-- TODO: verify ROS2 release -->
  <exec_depend>ysi_exo</exec_depend>          <!-- TODO: ROS2 port unknown -->
  <exec_depend>nmea_depth_transducer</exec_depend> <!-- TODO: ROS2 port unknown -->
  <exec_depend>imagenex_sidescan</exec_depend>    <!-- TODO: ROS2 port unknown -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
